# notes

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.rc
sources/: Console.cpp  Console.hpp  Database.cpp  Database.hpp  EditingNoteScene.cpp  EditingNoteScene.hpp  MainScene.cpp  MainScene.hpp  Note.hpp  OpenScene.cpp  OpenScene.hpp  Utils.hpp  main.cpp  resources.qrc  tables.sql
